describe optionality properly in openapi
